--- a/index.html
+++ b/index.html
@@ -1,159 +1,335 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic UPI QR Code Generator</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MLBB Top-Up | Gahoris Dais Store</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #e0f7fa, #f1f8ff);
+      color: #2c3e50;
+    }
+
+    header {
+      width: 100%;
+      height: 220px;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      border-bottom-left-radius: 2rem;
+      border-bottom-right-radius: 2rem;
+      overflow: hidden;
+    }
+
+    .banner-overlay {
+      background: rgba(0, 0, 0, 0.45);
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+    }
+
+    .banner-overlay h1 {
+      color: #fff;
+      font-size: 2rem;
+      text-align: center;
+      padding: 0 1rem;
     }
 
     .container {
-      text-align: center;
+      padding: 1.5rem;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .topup-section {
+      display: grid;
+      gap: 1.2rem;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      margin-top: 1rem;
+    }
+
+    .pack {
       background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
-      width: 100%;
-    }
-
-    h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
-      color: #4CAF50;
-    }
-
-    .form-group {
-      margin-bottom: 20px;
-    }
-
-    input[type="number"] {
-      width: calc(100% - 20px);
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-
-    .qr-section {
-      margin: 20px 0;
-    }
-
-    .qr-code {
-      margin-bottom: 10px;
-    }
-
-    .btn {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      font-size: 16px;
-      color: #fff;
-      background: #4CAF50;
-      border: none;
-      border-radius: 5px;
+      padding: 1.2rem;
+      text-align: center;
+      border-radius: 16px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border: 1px solid #e0e0e0;
       cursor: pointer;
-      transition: background 0.3s ease;
     }
 
-    .btn:hover {
-      background: #45a049;
+    .pack:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+    }
+
+    .pack h3 {
+      margin: 0.5rem 0;
+      font-size: 1.2rem;
+    }
+
+    .pack p {
+      color: #27ae60;
+      font-weight: bold;
+      font-size: 1rem;
+    }
+
+    .features {
+      background: #ffffff;
+      margin-top: 3rem;
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 12px 28px rgba(0, 0, 0, 0.06);
+    }
+
+    .features h2 {
+      margin-top: 0;
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+
+    .feature-grid {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+    }
+
+    .feature-box {
+      background: #f9fbfe;
+      border-radius: 14px;
+      padding: 1.5rem;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    .feature-box:hover {
+      background: #e7f3ff;
+      transform: translateY(-4px);
+    }
+
+    .feature-box .emoji {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .feature-box h4 {
+      margin: 0.5rem 0 0.3rem;
+      font-size: 1.1rem;
+      color: #2c3e50;
+    }
+
+    .feature-box p {
+      font-size: 0.95rem;
+      color: #555;
+      margin: 0;
+    }
+
+    /* FAB WhatsApp */
+    .fab {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25d366;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      z-index: 999;
+    }
+
+    .fab img {
+      width: 32px;
+      height: 32px;
+    }
+
+    /* Modal */
+    .modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 9999;
+    }
+
+    .modal-content {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 16px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+    }
+
+    .modal-content input {
+      width: 100%;
+      padding: 0.8rem;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+
+    .modal-content button {
+      background-color: #007bff;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    .modal-content button:hover {
+      background-color: #0056b3;
+    }
+
+    @media (max-width: 500px) {
+      .banner-overlay h1 {
+        font-size: 1.4rem;
+      }
     }
   </style>
 </head>
+
 <body>
+  <!-- Banner Section -->
+  <header style="background-image: url('YOUR_IMAGE_URL_HERE');">
+    <div class="banner-overlay">
+      <h1>Mobile Legends Diamond Top-Up</h1>
+    </div>
+  </header>
+
+  <!-- Diamond Packs -->
   <div class="container">
-    <h1>Generate UPI QR Code</h1>
-    <div class="form-group">
-      <label for="amount">Enter Amount (₹):</label>
-      <input type="number" id="amount" placeholder="Enter amount" min="1">
+    <h2>Choose Your Pack</h2>
+    <div class="topup-section">
+      <div class="pack" data-amount="83"><h3>86 Diamonds</h3><p>₹83</p></div>
+      <div class="pack" data-amount="169"><h3>172 Diamonds</h3><p>₹169</p></div>
+      <div class="pack" data-amount="249"><h3>257 Diamonds</h3><p>₹249</p></div>
+      <div class="pack" data-amount="329"><h3>344 Diamonds</h3><p>₹329</p></div>
+      <div class="pack" data-amount="409"><h3>429 Diamonds</h3><p>₹409</p></div>
     </div>
-    <button id="generateQRButton" class="btn">Generate QR Code</button>
-    <div class="qr-section">
-      <div id="qrCode" class="qr-code"></div>
-      <p id="qrMessage" style="display: none;">Scan to Pay</p>
+
+    <!-- Features Section -->
+    <div class="features">
+      <h2>Why Choose Us?</h2>
+      <div class="feature-grid">
+        <div class="feature-box"><div class="emoji">⚡</div><h4>Instant Delivery</h4><p>Get your diamonds delivered in 1–5 minutes.</p></div>
+        <div class="feature-box"><div class="emoji">💰</div><h4>Best Prices</h4><p>We offer the most affordable top-up rates.</p></div>
+        <div class="feature-box"><div class="emoji">📱</div><h4>24/7 Support</h4><p>Reach us any time via WhatsApp support.</p></div>
+        <div class="feature-box"><div class="emoji">⭐</div><h4>Trusted by Many</h4><p>10,000+ satisfied gamers worldwide.</p></div>
+        <div class="feature-box"><div class="emoji">💳</div><h4>Easy Payment</h4><p>Multiple secure payment options available.</p></div>
+      </div>
     </div>
-    <button id="payWithUPIButton" class="btn" style="display: none;">Pay with UPI</button>
   </div>
 
-  <!-- Include qrcode.js library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <!-- WhatsApp FAB -->
+  <a href="https://wa.me/your_number" target="_blank" class="fab">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+  </a>
+
+  <!-- Modal -->
+  <div class="modal" id="paymentModal">
+    <div class="modal-content">
+      <h3>Enter Your MLBB Details</h3>
+      <input type="text" id="userId" placeholder="MLBB User ID" />
+      <input type="text" id="serverId" placeholder="Server ID" />
+      <input type="hidden" id="selectedAmount" />
+      <button onclick="redirectToUPI()">Proceed to Pay</button>
+    </div>
+  </div>
+
   <script>
-    const upiID = "nandokh068@oksbi";
-    let lastRequestTime = 0;
-    let retryCount = 0;
+    const packs = document.querySelectorAll('.pack');
+    const modal = document.getElementById('paymentModal');
+    const userIdInput = document.getElementById('userId');
+    const serverIdInput = document.getElementById('serverId');
+    const selectedAmountInput = document.getElementById('selectedAmount');
 
-    function generateQR() {
-      const currentTime = Date.now();
-      const cooldown = 60000; // 1 minute cooldown
-      const amount = document.getElementById("amount").value;
-      const qrCodeDiv = document.getElementById("qrCode");
-      const qrMessage = document.getElementById("qrMessage");
-      const payWithUPIButton = document.getElementById("payWithUPIButton");
+    packs.forEach(pack => {
+      pack.addEventListener('click', () => {
+        selectedAmountInput.value = pack.dataset.amount;
+        modal.style.display = 'flex';
+      });
+    });
 
-      // Check cooldown
-      if (currentTime - lastRequestTime < cooldown) {
-        alert("Please wait a minute before generating another QR code.");
+    function redirectToUPI() {
+      const userId = userIdInput.value.trim();
+      const serverId = serverIdInput.value.trim();
+      const amount = selectedAmountInput.value;
+
+      if (!userId || !serverId) {
+        alert("Please enter both User ID and Server ID.");
         return;
       }
 
-      // Clear previous QR Code
-      qrCodeDiv.innerHTML = "";
+      localStorage.setItem("mlbbUserId", userId);
+      localStorage.setItem("mlbbServerId", serverId);
 
-      if (!amount || amount <= 0) {
-        alert("Please enter a valid amount.");
-        return;
-      }
-
-      // Generate UPI URL
-      const upiURL = `upi://pay?pa=${upiID}&pn=YourBusinessName&am=${amount}&cu=INR`;
-
-      try {
-        // Generate QR Code
-        new QRCode(qrCodeDiv, {
-          text: upiURL,
-          width: 200,
-          height: 200,
-        });
-
-        // Update request time
-        lastRequestTime = Date.now();
-
-        // Show QR Code and message
-        qrMessage.style.display = "block";
-
-        // Show "Pay with UPI" button
-        payWithUPIButton.style.display = "block";
-        payWithUPIButton.onclick = () => {
-          window.location.href = upiURL;
-        };
-      } catch (error) {
-        console.error("QR Code generation failed:", error);
-
-        // Retry logic
-        if (retryCount < 3) {
-          retryCount++;
-          setTimeout(generateQR, cooldown);
-        } else {
-          alert("Failed to generate QR code. Please try again later.");
-        }
-      }
+      // Redirect to UPI with placeholder
+      const upiUrl = `upi://pay?pa=yourupi@upi&pn=Gahoris%20Dais%20Store&am=${amount}&cu=INR`;
+      window.location.href = upiUrl;
     }
 
-    // Attach event listener to "Generate QR Code" button
-    document.getElementById("generateQRButton").addEventListener("click", generateQR);
+    // Show popup on return
+    window.addEventListener('load', () => {
+      const uid = localStorage.getItem("mlbbUserId");
+      const sid = localStorage.getItem("mlbbServerId");
+      if (uid && sid) {
+        setTimeout(() => {
+          alert(`Order Completed!\nUser ID: ${uid}\nServer ID: ${sid}`);
+          localStorage.removeItem("mlbbUserId");
+          localStorage.removeItem("mlbbServerId");
+        }, 500);
+      }
+    });
+
+    // Close modal if clicked outside
+    window.onclick = function(event) {
+      if (event.target === modal) {
+        modal.style.display = "none";
+      }
+    }
   </script>
 </body>
+</html>
+
+
+---
+
+Notes:
+
+Replace "YOUR_IMAGE_URL_HERE" in <header> with your banner image URL.
+
+Replace "yourupi@upi" in UPI link with your real UPI ID.
+
+Replace WhatsApp link with your number: https://wa.me/<your_number>
+
+
+Want me to host or help you connect this to a domain too?
+
 </html>
